--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -9,6 +9,7 @@
     <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/output.css' %}" rel="stylesheet">
+    <script type="text/javascript" src="{% static 'js/jquery-3.7.1.min.js' %}"></script>     
 </head>
 <body class="bg-fblue-950 flex flex-col min-h-screen">
 
