--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -99,6 +99,7 @@
     <!-- Main Content -->
     <main class="text-fgray-50 mx-auto -mt-5 flex-grow">
         {% block content %}
+        {% load i18n %}
         {% endblock %}
     </main>
 
