--- a/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
+++ b/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
@@ -27,7 +27,7 @@
                             <img src="{{ submission_data.user_picture }}" alt="{{ submission_data.submission.user.username }}" class="w-8 h-8 rounded-full mr-3">
                             <div>
                                 <p class="font-semibold">{{ submission_data.submission.user.username }}</p>
-                                <p class="text-xs text-gray-500">{{ submission_data.submission.submitted_at|date:"F d, Y" }}</p>
+                                <p class="text-xs text-gray-500">{{ submission_data.submission.submitted_at|date:"d. F Y H:i" }}</p>
                             </div>
                         </div>
                         <img src="{{ submission_data.submission.image1.url }}" alt="Submission by {{ submission_data.submission.user.username }}" class="w-96 h-auto object-cover rounded-md mb-2">
@@ -37,40 +37,37 @@
                         {% if submission_data.submission.image3 %}
                         <img src="{{ submission_data.submission.image3.url }}" alt="Submission by {{ submission_data.submission.user.username }}" class="w-96 h-auto object-cover rounded-md mb-2">
                         {% endif %}
-                        <div class="relative">
-                            <form method="post" action="{% url 'photo_challenge:photo_vote_submission' submission_data.submission.id %}">
+                        <div class="relative flex items-center">
+                            <form method="post" action="{% url 'photo_challenge:photo_vote_submission' submission_data.submission.id %}" class="flex items-center">
                                 {% csrf_token %}
-                                <button type="submit" class="font-bold" {% if not user.is_authenticated or not can_vote %}disabled{% endif %}>
+                                <button type="submit" class="font-bold flex items-center" {% if not user.is_authenticated or not can_vote %}disabled{% endif %}>
                                     {% if submission_data.has_voted %}
-                                        <i class="fa-solid fa-heart text-red-500"></i>
+                                        <i class="fa-solid fa-heart text-red-500 mr-1"></i>
                                     {% else %}
-                                        <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-regular fa-heart mr-1"></i>
                                     {% endif %}
                                     {{ submission_data.submission.votes.count }}
                                 </button>
                             </form>
+                            <button class="ml-4 flex items-center text-blue-400 toggle-comments-button">
+                                <i class="fas fa-comments mr-1"></i>
+                                <span class="comment-counter">{{ submission_data.comments|length }}</span>
+                                <span class="comment-toggle-text hidden">Kommentare verbergen</span>
+                            </button>
                             {% if submission_data.submission.is_winner %}
-                            <p class="text-yellow-400">Gewinner!</p>
+                            <p class="text-yellow-400 ml-4">Gewinner!</p>
                             {% endif %}
                         </div>
                     </div>
                 </div>
                 
-                <div class="bg-gray-700 p-4 -mt-8 rounded-lg">
-                    <div class="flex justify-between items-center">
-                        <h3 class="text-xl font-bold mb-2">Kommentare</h3>
-                        <div class="flex items-center">
-                            <i class="fas fa-comments text-blue-400"></i>
-                            <p class="ml-2">{{ submission_data.comments|length }}</p>
-                            <button class="text-xs text-blue-400 ml-2 toggle-comments-button">Kommentare anzeigen</button>
-                        </div>
-                    </div>
-                    <div class="comments-container h-auto overflow-y-auto mb-4 p-2 bg-gray-800 rounded hidden">
+                <div class="bg-gray-700 p-4 -mt-8 rounded-lg comments-container hidden">
+                    <div class="comments-list">
                         {% for comment in submission_data.comments %}
                         <div class="mb-4 {% if comment.user == user %}text-right{% endif %}">
                             <div class="inline-block bg-gray-600 rounded-lg p-2 max-w-3/4">
                                 <p class="text-white">{{ comment.text }}</p>
-                                <p class="text-xs text-gray-400">{{ comment.user.username }} - {{ comment.created_at|date:"H:i" }}</p>
+                                <p class="text-xs text-gray-400">{{ comment.user.username }} - {{ comment.created_at|date:"d. F Y H:i" }}</p>
                                 {% if comment.replies.count > 0 %}
                                 <button class="text-xs text-blue-400 mt-1 toggle-replies-button" data-comment-id="{{ comment.id }}">Antworten anzeigen</button>
                                 <div class="replies-container hidden">
@@ -78,7 +75,7 @@
                                     <div class="mt-2 {% if reply.user == user %}text-right{% endif %}">
                                         <div class="inline-block bg-gray-500 rounded-lg p-2 max-w-3/4">
                                             <p class="text-white">{{ reply.text }}</p>
-                                            <p class="text-xs text-gray-300">{{ reply.user.username }} - {{ reply.created_at|date:"H:i" }}</p>
+                                            <p class="text-xs text-gray-300">{{ reply.user.username }} - {{ reply.created_at|date:"d. F Y H:i" }}</p>
                                         </div>
                                     </div>
                                     {% endfor %}
@@ -89,11 +86,11 @@
                         </div>
                         {% endfor %}
                     </div>
-                    <form method="post" action="{% url 'photo_challenge:photo_add_comment' submission_data.submission.id %}" class="flex">
+                    <form method="post" action="{% url 'photo_challenge:photo_add_comment' submission_data.submission.id %}" class="flex text-fgray-950 comment-form hidden">
                         {% csrf_token %}
-                        <input type="hidden" name="parent" id="parent-comment-id">
-                        <input type="text" name="text" placeholder="Write a comment..." class="flex-grow p-1 rounded-l-lg">
-                        <button type="submit" class="bg-forange-300 text-white font-bold rounded-r-lg py-2 px-4">Senden</button>
+                        <input type="hidden" name="parent" class="parent-comment-id">
+                        <input type="text" name="text" placeholder="Kommentar schreiben..." class="flex-grow p-1 rounded-l-lg">
+                        <button type="submit" class="bg-forange-300 text-fgray-50 font-bold rounded-r-lg py-2 px-4">Senden</button>
                     </form>
                 </div>
             </li>
@@ -119,36 +116,43 @@
     }
     
     document.addEventListener('DOMContentLoaded', function() {
-        const replyButtons = document.querySelectorAll('.reply-button');
-        const parentCommentIdInput = document.getElementById('parent-comment-id');
+        const toggleCommentsButtons = document.querySelectorAll('.toggle-comments-button');
+        const parentCommentIdInput = document.querySelectorAll('.parent-comment-id');
+        const commentForms = document.querySelectorAll('.comment-form');
 
+        toggleCommentsButtons.forEach(button => {
+            button.addEventListener('click', function() {
+                const commentsContainer = this.closest('li').querySelector('.comments-container');
+                const commentForm = this.closest('li').querySelector('.comment-form');
+                const commentCounter = this.querySelector('.comment-counter');
+                const commentToggleText = this.querySelector('.comment-toggle-text');
+                commentsContainer.classList.toggle('hidden');
+                commentForm.classList.toggle('hidden');
+                commentCounter.classList.toggle('hidden');
+                commentToggleText.classList.toggle('hidden');
+            });
+        });
+
+        const replyButtons = document.querySelectorAll('.reply-button');
         replyButtons.forEach(button => {
             button.addEventListener('click', function() {
                 const commentId = this.getAttribute('data-comment-id');
-                parentCommentIdInput.value = commentId;
-                const commentInput = this.closest('.bg-gray-700').querySelector('input[name="text"]');
+                const commentForm = this.closest('li').querySelector('.comment-form');
+                commentForm.querySelector('.parent-comment-id').value = commentId;
+                const commentInput = commentForm.querySelector('input[name="text"]');
                 commentInput.focus();
-                commentInput.placeholder = 'Reply...';
+                commentInput.placeholder = 'Antworten...';
             });
-        }); 
+        });
 
-    const toggleCommentsButtons = document.querySelectorAll('.toggle-comments-button');
-    toggleCommentsButtons.forEach(button => {
-        button.addEventListener('click', function() {
-            const commentsContainer = this.closest('.bg-gray-700').querySelector('.comments-container');
-            commentsContainer.classList.toggle('hidden');
-            this.textContent = commentsContainer.classList.contains('hidden') ? 'Show Comments' : 'Hide Comments';
+        const toggleRepliesButtons = document.querySelectorAll('.toggle-replies-button');
+        toggleRepliesButtons.forEach(button => {
+            button.addEventListener('click', function() {
+                const repliesContainer = this.closest('.bg-gray-600').querySelector('.replies-container');
+                repliesContainer.classList.toggle('hidden');
+                this.textContent = repliesContainer.classList.contains('hidden') ? 'Antworten anzeigen' : 'Antworten verbergen';
+            });
         });
     });
-
-    const toggleRepliesButtons = document.querySelectorAll('.toggle-replies-button');
-    toggleRepliesButtons.forEach(button => {
-        button.addEventListener('click', function() {
-            const repliesContainer = this.closest('.bg-gray-600').querySelector('.replies-container');
-            repliesContainer.classList.toggle('hidden');
-            this.textContent = repliesContainer.classList.contains('hidden') ? 'Show Replies' : 'Hide Replies';
-        });
-    });
-});
 </script>
 {% endblock %}
