--- a/static/css/output.css
+++ b/static/css/output.css
@@ -686,6 +686,10 @@ video {
   margin-bottom: 2rem;
 }
 
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -734,10 +738,6 @@ video {
   margin-top: 2rem;
 }
 
-.mt-\[11px\] {
-  margin-top: 11px;
-}
-
 .mt-\[10px\] {
   margin-top: 10px;
 }
@@ -748,6 +748,10 @@ video {
 
 .inline-block {
   display: inline-block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -842,12 +846,44 @@ video {
   width: 100%;
 }
 
+.w-screen {
+  width: 100vw;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
+}
+
+.w-\[90vw\] {
+  width: 90vw;
+}
+
+.w-\[75vw\] {
+  width: 75vw;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
 .min-w-1\/2 {
   min-width: 50%;
 }
 
 .min-w-7\/8 {
   min-width: 87.5%;
+}
+
+.min-w-96 {
+  min-width: 96rem;
 }
 
 .min-w-\[300px\] {
@@ -984,10 +1020,6 @@ video {
   overflow: hidden;
 }
 
-.overflow-y-auto {
-  overflow-y: auto;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1034,6 +1066,11 @@ video {
 .bg-fblue-950 {
   --tw-bg-opacity: 1;
   background-color: rgb(32 40 61 / var(--tw-bg-opacity));
+}
+
+.bg-fgreen-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(78 126 107 / var(--tw-bg-opacity));
 }
 
 .bg-fgreen-600 {
@@ -1153,6 +1190,10 @@ video {
   padding-top: 1.5rem;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1247,6 +1288,11 @@ video {
   color: rgb(39 42 42 / var(--tw-text-opacity));
 }
 
+.text-forange-600 {
+  --tw-text-opacity: 1;
+  color: rgb(198 91 48 / var(--tw-text-opacity));
+}
+
 .opacity-0 {
   opacity: 0;
 }
@@ -1277,8 +1323,8 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-opacity {
-  transition-property: opacity;
+.transition-all {
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1289,26 +1335,8 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.delay-300 {
-  transition-delay: 300ms;
-}
-
-.delay-150 {
-  transition-delay: 150ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.duration-100 {
-  transition-duration: 100ms;
 }
 
 .ease-in-out {
@@ -1317,11 +1345,6 @@ video {
 
 .first\:mt-0:first-child {
   margin-top: 0px;
-}
-
-.hover\:rounded-b-lg:hover {
-  border-bottom-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
 }
 
 .hover\:bg-fgreen-500:hover {
@@ -1350,10 +1373,6 @@ video {
 
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
-}
-
-.group:hover .group-hover\:delay-0 {
-  transition-delay: 0s;
 }
 
 @media (min-width: 640px) {
