--- a/members/templates/members/login.html
+++ b/members/templates/members/login.html
@@ -8,13 +8,13 @@
             <label class="block text-gray-300 text-sm font-bold mb-2" for="username">
                 Benutzername
             </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" name="username" required>
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-fgray-950 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" name="username" required>
         </div>
         <div class="mb-6">
             <label class="block text-gray-300 text-sm font-bold mb-2" for="password">
                 Passwort
             </label>
-            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" name="password" required>
+            <input class="shadow appearance-none border rounded w-full py-2 px-3 text-fgray-950 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" name="password" required>
         </div>
         <div class="flex items-center justify-between">
             <button class="bg-forange-300 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
