--- a/photo_challenge/templates/photo_challenge/photo_challenge_create.html
+++ b/photo_challenge/templates/photo_challenge/photo_challenge_create.html
@@ -5,7 +5,7 @@
 <div class="mt-12 mb-8 rounded-lg min-w-1/2 mx-auto py-6 sm:px-6 lg:px-8">
     <div class="overflow-hidden shadow-sm sm:rounded-lg">
         <div class="bg-fgreen-800 rounded-lg p-4">
-            <h1 class="text-3xl font-bold mb-4 text-white">Create New Photo Challenge</h1>
+            <h1 class="text-3xl font-bold mb-4 text-white">Neue Foto Challenge erstellen</h1>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.non_field_errors }}
@@ -28,10 +28,10 @@
                 </div>
                 {% endfor %}
                 <div class="mt-6 text-fgray-900">
-                    <button type="submit" class="bg-forange-300 gray-800 text-fgray-950 px-4 py-2 rounded-md hover:bg-gray-700">Create Challenge</button>
+                    <button type="submit" class="bg-forange-300 gray-800 text-fgray-950 px-4 py-2 rounded-md hover:bg-gray-700">Challenge erstellen</button>
                 </div>
             </form>
-            <a href="{% url 'photo_challenge:photo_challenge_list_private' %}" class="inline-block mt-4 text-gray-400 hover:text-gray-200">Back to Challenge Management</a>
+            <a href="{% url 'photo_challenge:photo_challenge_list_private' %}" class="inline-block mt-4 text-gray-400 hover:text-gray-200">Zurück zum Challenge Management</a>
         </div>
     </div>
 </div>
