--- a/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
+++ b/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
@@ -31,7 +31,7 @@
                                                 <img src="{{ submission_data.user_picture }}" alt="{{ submission_data.submission.user.username }}" class="w-8 h-8 rounded-full mr-3">
                                                 <div>
                                                     <p class="font-semibold">{{ submission_data.submission.user.username }}</p>
-                                                    <p class="text-xs text-gray-500">{{ submission_data.submission.submitted_at|date:"d. F Y H:i" }}</p>
+                                                    <p class="text-xs text-gray-500">{{ submission_data.submission.submitted_at }}</p>
                                                 </div>
                                             </div>
                                             
@@ -66,7 +66,7 @@
                                                     <div class="mb-4 {% if comment.user == user %}text-left{% endif %}">
                                                         <div class="inline-block bg-gray-600 rounded-lg p-2 max-w-3/4">
                                                             <p class="text-white">{{ comment.text }}</p>
-                                                            <p class="text-xs text-gray-400">{{ comment.user.username }} - {{ comment.created_at|date:"d. F Y H:i" }}</p>
+                                                            <p class="text-xs text-gray-400">{{ comment.user.username }} - {{ comment.created_at }}</p>
                                                             {% if comment.replies.count > 0 %}
                                                             <button class="text-xs text-blue-400 mt-1 toggle-replies-button" data-comment-id="{{ comment.id }}">Antworten anzeigen</button>
                                                             <div class="replies-container hidden">
