--- a/photo_challenge/templates/photo_challenge/photo_challenge_list.html
+++ b/photo_challenge/templates/photo_challenge/photo_challenge_list.html
@@ -8,7 +8,7 @@
             {% for challenge in upcoming_challenges %}
             <div class="bg-gray-800 p-4 flex flex-col justify-start md:justify-center items-start">
                 <h2 class="text-white text-lg font-bold">{{ challenge.name }}</h2>
-                <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Challenge endet am:</strong> {{ challenge.end_date|date:"d M, Y" }}</p>
+                <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Challenge endet am:</strong> {{ challenge.end_date }}</p>
                 <a href="{% url 'photo_challenge:photo_challenge_detail' challenge.pk %}" class="mt-2 py-1 px-2 bg-forange-300 rounded-lg">Jetzt teilnehmen</a>
             </div>
             {% empty %}
@@ -25,7 +25,7 @@
         {% for challenge in past_challenges %}
         <div class="bg-gray-800 p-4 flex flex-col justify-center items-start">
             <h2 class="text-white text-lg font-bold">{{ challenge.name }}</h2>
-            <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Endete am:</strong> {{ challenge.end_date|date:"d M, Y" }}</p>
+            <p class="text-gray-400 font-light mt-2"><strong class="uppercase">Endete am:</strong> {{ challenge.end_date }}</p>
             <a href="{% url 'photo_challenge:photo_challenge_detail' challenge.pk %}" class="mt-2 py-1 px-2 bg-forange-300 rounded-lg">Ergebnisse</a>
         </div>
         {% empty %}
