--- a/meetups/templates/meetups/meetup_detail.html
+++ b/meetups/templates/meetups/meetup_detail.html
@@ -22,7 +22,7 @@
                     {% if user.is_authenticated and image.user == user %}
                         <form method="post" action="{% url 'meetup_image_delete' meetup.id image.id %}">
                             {% csrf_token %}
-                            <button type="submit" class="py-1 px-2 bg-forange-300 absolute top-2 right-2 bg-red-500 text-white rounded-full p-1">Delete</button>
+                            <button type="submit" class="py-1 px-2 bg-forange-300 absolute top-2 right-2 bg-red-500 text-white rounded-full p-1">Löschen</button>
                         </form>
                     {% endif %}
                 </div>
