--- a/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
+++ b/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
@@ -58,6 +58,12 @@
                                                         <span class="comment-toggle-text hidden">Kommentare verbergen</span>
                                                     </button>
                                                 </div>
+                                                {% if user.is_authenticated and submission_data.submission.user == user %}
+                                                    <form method="post" action="{% url 'photo_challenge:delete_submission' submission_data.submission.id %}">
+                                                        {% csrf_token %}
+                                                        <button type="submit" class="py-1 px-2 bg-red-500 text-white rounded-full p-1 ml-4">Löschen</button>
+                                                    </form>
+                                                {% endif %}
                                             </div>
                                             
                                             <div class="bg-gray-700 p-4 mt-2 rounded-lg comments-container hidden" data-image-number="{{ image_number }}">
