--- a/meetups/templates/meetups/meetup_list_private.html
+++ b/meetups/templates/meetups/meetup_list_private.html
@@ -1,8 +1,7 @@
-<!-- meetups/meetup_list.html -->
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto w-full max-w-4xl p-6 shadow-md">
+<div class="bg-fgreen-800 rounded-lg mt-12 mb-8 mx-auto min-w-3/4 max-w-10/12 p-6 shadow-md">
     <h1 class="text-3xl font-bold mb-6 text-center text-white">Treffen verwalten</h1>
     <div class="flex justify-end mb-6">
         <a href="{% url 'meetup_create' %}" class="btn btn-primary bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
@@ -21,10 +20,16 @@
                     <p class="text-gray-300 mb-2"><span class="text-xl font-bold mb-2">Datum: </span> {{ meetup.date }}</p>
                     <p class="text-gray-300 mb-2"><span class="text-xl font-bold mb-2">Zeit: </span> {{ meetup.time }}</p>
                 </div>
-                <div>
+                <div class="flex space-x-4">
                     <a href="{% url 'meetup_edit' meetup.pk %}" class="text-blue-400 hover:text-blue-600">
                         <i class="fas fa-edit mr-1"></i> Bearbeiten
                     </a>
+                    <form action="{% url 'delete_meetup' meetup.pk %}" method="post" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="text-red-400 hover:text-red-600" onclick="return confirm('Bist du sicher, dass du dieses Treffen löschen möchtest?');">
+                            <i class="fas fa-trash-alt mr-1"></i> Löschen
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
