--- a/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
+++ b/photo_challenge/templates/photo_challenge/photo_challenge_detail.html
@@ -110,14 +110,14 @@
         </ul>
 
         {% if user.is_authenticated %}
-        <div class="mt-8">
-            <h2 class="text-2xl font-bold mb-4">Lade deine Fotos hoch</h2>
-            <form method="post" enctype="multipart/form-data" action="{% url 'photo_challenge:photo_submission_create' object.id %}">
-                {% csrf_token %}
-                {{ submission_form.as_p }}
-                <button type="submit" class="mt-4 bg-forange-300 text-white font-bold rounded-lg py-1 px-2">Hochladen</button>
-            </form>
-        </div>
+            <div class="mt-8">
+                <h2 class="text-2xl font-bold mb-4">Lade ein neues Foto hoch</h2>
+                <form method="post" enctype="multipart/form-data" action="{% url 'photo_challenge:photo_submission_create' object.id %}">
+                    {% csrf_token %}
+                    {{ submission_form.as_p }}
+                    <button type="submit" class="mt-4 bg-forange-300 text-white font-bold rounded-lg py-1 px-2">Hochladen</button>
+                </form>
+            </div>
         {% endif %}
     </div>
 </div>
